--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
  6   <body>
  7     <h1>hello, world</h1>
  8     <p>Call me Ishmael.</p>
+       <img src="images/breaching_whale.jpg">
  9   </body>
 10 </html>
